# build

./: Cargo.toml  Dockerfile  README.md  default.toml  deploy-dependency-graph.puml  example.toml  minimal.toml  nais.yml  workflow.yml
.github/workflows/: preflight.yml
diagrams/: build-process.puml  data-dependencies.puml
src/: auth.rs  build.rs  config.rs  deploy.rs  docker.rs  git.rs  google.rs  lib.rs  main.rs  nais_yaml.rs  oci.rs  pipeline.rs  sdk.rs
