[package]
name = "nb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3"
thiserror = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde-inline-default = "0.2.1"
chrono = "0.4.38"
serde_yaml = "0.9.34"
env_logger = "0.11.5"
log = "0.4.22"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
google-cloud-auth = { version = "0.17.2", features = ["external-account", "rustls-tls"], default-features = false }
google-cloud-token = "0.1.2"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"], default-features = false }
serde_json = "1.0.133"